--- a/src/modules/Invest/components/ProductSpotlight/_ProductSpotlight.scss
+++ b/src/modules/Invest/components/ProductSpotlight/_ProductSpotlight.scss
@@ -382,19 +382,6 @@
       width: 100%;
       max-width: 440px;
       transform: translate(0, 0);
-
-      .parallaxed-1 img {
-        width: 66.666%;
-      }
-
-      .parallaxed-2 {
-        transform: translateY(-39%) translateX(48%);
-
-        img {
-          width: 49.41%;
-          max-width: 49.41%;
-        }
-      }
     }
   }
 
