--- a/src/modules/XborgApp/components/Leaderboard/_Leaderboard.scss
+++ b/src/modules/XborgApp/components/Leaderboard/_Leaderboard.scss
@@ -165,4 +165,11 @@
       }
     }
   }
+
+  @media (max-width: $xs-max) {
+    .parallaxed .list .border {
+      left: 21%;
+      width: 16px;
+    }
+  }
 }
